# zipdirfs

./: .clang-format  .editorconfig  .gitignore  .megami.gitlab-ci.yml  ChangeLog  Makefile.am  README.md  TODO  configure.ac  lcovrc  main.cpp  maintest.cpp  zipdirfs.cbp  zipdirfs.depend
assets/: zipdirfs.desktop  zipdirfs.xpm
debian/: changelog  control  copyright
doc/: components.uxf  containers.uxf  fusekit.uxf  utilities.uxf  zip.uxf
include/: CommandLine.h  DefaultPermission.h  DirectoryNode.h  EntryFactory.h  LinkBuffer.h  LinkFactory.h  LinkNode.h  LinkTime.h  Main.h  NameSearchTree.h  NameSearchTreeNodes.h  NameSearchWalker.h  NotFoundException.h  Options.h  StateReporter.h  SystemDirectoryFactory.h  SystemDirectoryTime.h  ZipDirectoryFactory.h  ZipEntry.h  ZipFile.h  ZipFileBuffer.h  ZipIterator.h  ZipRootFactory.h  ZipTime.h  ZipWalker.h  entry_definitions.h  stream_indent.h
include/ZipDirFs/: DefaultPermission.h  DirectoryMark.h  DirectoryNode.h  EntryFactory.h  FixedDirectoryFactory.h  LinkBuffer.h  LinkFactory.h  LinkNode.h  LinkTime.h  MutexLockPolicy.h  NameSearchTree.h  NameSearchTreeNodes.h  NameSearchWalker.h  NotFoundException.h  StatDirectoryFactory.h  SymlinkTime.h  SystemDirectoryFactory.h  SystemDirectoryTime.h  UnionDirectoryFactory.h  ZipDirectoryFactory.h  ZipEntry.h  ZipEntryFileInfo.h  ZipFile.h  ZipFileBuffer.h  ZipIterator.h  ZipRootFactory.h  ZipTime.h  ZipWalker.h  entry_definitions.h  stream_indent.h  utils.h
include/zipdirfs/: DefaultPermission.h  DirectoryMark.h  DirectoryNode.h  EntryFactory.h  FixedDirectoryFactory.h  LinkBuffer.h  LinkFactory.h  LinkNode.h  LinkTime.h  MutexLockPolicy.h  NameSearchTree.h  NameSearchTreeNodes.h  NameSearchWalker.h  NotFoundException.h  StatDirectoryFactory.h  SystemDirectoryFactory.h  SystemDirectoryTime.h  UnionDirectoryFactory.h  ZipDirectoryFactory.h  ZipEntry.h  ZipEntryFileInfo.h  ZipFile.h  ZipFileBuffer.h  ZipIterator.h  ZipRootFactory.h  ZipTime.h  ZipWalker.h  entry_definitions.h  stream_indent.h
src/: CommandLine.cpp  EntryFactory.cpp  LinkTime.cpp  Main.cpp  Makefile.am  NotFoundException.cpp  Options.cpp  StateReporter.cpp  ZipEntry.cpp  ZipFile.cpp  ZipIterator.cpp  ZipWalker.cpp  stream_indent.cpp
src/ZipDirFs/: EntryFactory.cpp  LinkTime.cpp  Makefile.am  MutexLockPolicy.cpp  NotFoundException.cpp  SymlinkTime.cpp  SystemDirectoryFactory.cpp  ZipEntry.cpp  ZipEntryFileInfo.cpp  ZipFile.cpp  ZipIterator.cpp  ZipWalker.cpp  stream_indent.cpp
src/ZipDirFs/Components/: ChangedProxy.cpp  ChangedStart.cpp  EntryListProxyIncremental.cpp  EntryListProxyProxy.cpp  NativeChanged.cpp  NativeDirectoryEnumerator.cpp  ZipDirectoryEnumerator.cpp  ZipFileChanged.cpp
src/ZipDirFs/Containers/: EntryGenerator.cpp  EntryIterator.cpp
src/ZipDirFs/Fuse/: EntryProxy.cpp  NativeDirectory.cpp  NativeSymlink.cpp  ZipDirectory.cpp  ZipFile.cpp  ZipRootDirectory.cpp
src/ZipDirFs/Utilities/: FileSystem.cpp  MutexLocker.cpp  list_cleanup.cpp
src/ZipDirFs/Zip/: Archive.cpp  Entry.cpp  Exception.cpp  Factory.cpp  Lib.cpp  Stream.cpp
src/ZipDirFs/Zip/Base/: Content.cpp  Lib.cpp  Stat.cpp
src/zipdirfs/: EntryFactory.cpp  LinkTime.cpp  MutexLockPolicy.cpp  NameSearchTree.cpp  NotFoundException.cpp  ZipEntry.cpp  ZipEntryFileInfo.cpp  ZipFile.cpp  ZipIterator.cpp  ZipWalker.cpp  stream_indent.cpp
test/: Makefile.am  StateReporter.cpp  gtest.cpp  gtest.h  gtest_helper.cpp  gtest_helper.h  maintest.cpp
test/Coverage/: coverage.cpp
test/ZipDirFs/: Integration.cpp  Integration.h
test/ZipDirFs/Components/: ChangedProxy.cpp  ChangedProxy.h  ChangedStart.cpp  ChangedStart.h  EntryListProxyIncremental.cpp  EntryListProxyIncremental.h  EntryListProxyProxy.cpp  EntryListProxyProxy.h  NativeChanged.cpp  NativeChanged.h  NativeDirectoryEnumerator.cpp  NativeDirectoryEnumerator.h  NativeFactory.cpp  NativeFactory.h  ZipDirectoryEnumerator.cpp  ZipDirectoryEnumerator.h  ZipFactory.cpp  ZipFactory.h  ZipFileChanged.cpp  ZipFileChanged.h
test/ZipDirFs/Components/Fixtures/: LibInstance.h  ZipFactoryAccess.cpp  ZipFactoryAccess.h
test/ZipDirFs/Containers/: EntryGenerator.cpp  EntryGenerator.h  EntryIterator.cpp  EntryIterator.h  EntryList.cpp  EntryList.h  list_map.cpp  list_map.h
test/ZipDirFs/Containers/Fixtures/: EntryIteratorEndWrapper.cpp  EntryIteratorEndWrapper.h  EntryIteratorTestWrapper.cpp  EntryIteratorTestWrapper.h  EntryIteratorWrapperMock.cpp  EntryIteratorWrapperMock.h  HolderStateInitializer.cpp  HolderStateInitializer.h  helpers.cpp  helpers.h  list_for_proxy.cpp  list_for_proxy.h  list_map_for_proxy.cpp  list_map_for_proxy.h  list_map_mock.cpp  list_map_mock.h  list_mock.cpp  list_mock.h  map_mock.cpp  map_mock.h
test/ZipDirFs/Containers/Helpers/Fixtures/: ChangedMock.cpp  ChangedMock.h  EntryListProxyMock.cpp  EntryListProxyMock.h  EnumeratorMock.cpp  EnumeratorMock.h  FactoryMock.cpp  FactoryMock.h
test/ZipDirFs/Fuse/: DirectoryNode.cpp  DirectoryNode.h  EntryProxy.cpp  EntryProxy.h  NativeTimePolicy.cpp  NativeTimePolicy.h  ZipFileBuffer.cpp  ZipFileBuffer.h  ZipTimePolicy.cpp  ZipTimePolicy.h
test/ZipDirFs/Fuse/Fixtures/: EmptyEnumerator.cpp  EmptyEnumerator.h  FunctionalEnumerator.cpp  FunctionalEnumerator.h  FuseDaemon.cpp  FuseDaemon.h  FuseDaemonFork.cpp  FuseDaemonFork.h  FuseDaemonThread.cpp  FuseDaemonThread.h  NullFactory.cpp  NullFactory.h  OneChanged.cpp  OneChanged.h
test/ZipDirFs/Fuse/Worker/: DirectoryNodeList.cpp  FileRead.cpp  FileStat.cpp
test/ZipDirFs/Utilities/: FileSystem.cpp  FileSystem.h  list_cleanup.cpp  list_cleanup.h
test/ZipDirFs/Utilities/Fixtures/: FileSystem.cpp  FileSystem.h
test/ZipDirFs/Worker/: Explore.cpp
test/ZipDirFs/Zip/: Archive.cpp  Archive.h  Entry.cpp  Entry.h  Factory.cpp  Factory.h  Lib.cpp  Lib.h  Stream.cpp  Stream.h
test/ZipDirFs/Zip/Base/: Content.cpp  Content.h
test/ZipDirFs/Zip/Fixtures/: Lib.cpp  Lib.h  SimpleSpan.cpp  SimpleSpan.h  StreamBufferInitializer.cpp  StreamBufferInitializer.h
test/fusekit/Fixtures/: EntryMock.h
test/old/: maintest.cpp  tests.cpp
tools/dev-env/: Dockerfile  Dockerfile.bullseye  firstrun.sh  (+1 more)
(+42 files in other folders)
